# steelbox

./: CFrame.py  CLAUDE.md  CPipe.py  CUtils.py  InitGui.py  QUICKSTART.md  README.md  SteelBox_tooltips.py  dodoPM.py  fFeatures.py  pCmd.py  pFeatures.py  package.xml  quetzal_config.py  setup-steelbox.sh
core/: __init__.py  box_generator.py  box_specs.py  end_cap.py  jointed_box.py
cut_list/: cut_list_commands.py
docs/: 2 x 2 x 0.12 wall - Square.dxf  EXAMPLE_2x2x125_Oshcut.json  equipment-box-workbench-plan.md  tab-slot-visual-guide.md
holes/: __init__.py  hole_types.py  pattern_generator.py
joinery/: __init__.py  corner_relief.py  interference.py  joint_detector.py  tab_slot.py
profiles/: __init__.py  dxf_importer.py  profile_manager.py  sketch_generator.py  tube_profile.py
profiles/data/dxf/: 2 x 2 x 0.188 wall - Square.dxf  2.5 x 2.5 x 0.25 wall - Square.dxf
translationz/: update_crowdin.py
